Completed Week 2 lab sheet

--- a/weekly_labs/Week_02_Operators/week_02_operators.ipynb
+++ b/weekly_labs/Week_02_Operators/week_02_operators.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -309,14 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -340,8 +333,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple conditions\n",
+    "\n",
+    "More on this next week, but we can check multiple conditions using `and` and `or` operators to join different logical expressions together.\n",
+    "\n",
+    "`a and b` returns True if both `a` and `b` are True\n",
+    "\n",
+    "`a or b` returns True if either `a` or `b` is True\n",
+    "\n",
+    "> Extend the example below for a full mark scheme: 40 to pass, 50 for a 2:2, 60 for a 2:1, and 70 for a 1st.\n",
+    "\n",
+    "> Extend it further to print an error for numbers outside the range 0-100."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Grade is 55.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "grade = 55.1\n",
+    "print('Grade is',grade)\n",
+    "if grade>=60 and grade<70:\n",
+    "    print('Result is 2:1')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Floating point comparisons\n",
+    "\n",
+    "As discussed in the week 1 seminar, sometimes things don't go as you'd expect when comparing real numbers.  Consider the following example.\n",
+    "\n",
+    "> Play around with different calculations for `f` and see what happens."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -363,6 +404,106 @@
     "    print('e equals f')\n",
     "if e != f:\n",
     "    print('e not equal to f')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> Challenge: edit the `'???'` below to check if the values of `e` and `f` are equal to within a specified tolerance, expressed as a percentage of their values. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e is 0.5555555555555556\n",
+      "f is 0.5555555555555555\n",
+      "e is within 0.1% of f\n",
+      "e not within 0.1% of f\n"
+     ]
+    }
+   ],
+   "source": [
+    "tol = 1e-3 # tolerance is 0.1%\n",
+    "e = 5/9\n",
+    "f = (1/3)*5*(1/3)\n",
+    "print('e is', e)\n",
+    "print('f is', f)\n",
+    "if '???' and '???':\n",
+    "    print('e is within 0.1% of f')\n",
+    "if '???' or '???':\n",
+    "    print('e not within 0.1% of f')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Portfolio Assignment: Comparisons\n",
+    "\n",
+    "1. Edit the code below to print the statements only when they apply.\n",
+    "\n",
+    "2. Copy the code to a file `compare.py` and test it by running `python test_compare.py compare.py`.\n",
+    "\n",
+    "3. Submit your `compare.py` file to the week 2 portfolio assignment on Blackboard "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7195767195767196 is greater than 1.5867768595041323\n",
+      "0.7195767195767196 is less than than 1.5867768595041323\n",
+      "0.7195767195767196 is equal to 1.5867768595041323\n",
+      "0.7195767195767196 is within 0.1% of 1.5867768595041323\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 13.6/18.9\n",
+    "b = 19.2/12.1\n",
+    "\n",
+    "if '???':\n",
+    "    print(a,'is greater than',b)\n",
+    "if '???':\n",
+    "    print(a,'is less than than',b)\n",
+    "if '???':\n",
+    "    print(a,'is equal to',b)\n",
+    "if '???':\n",
+    "    print(a,'is within 0.1% of',b)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Optional extra\n",
+    "\n",
+    "Complete the code below such that it tests if point `(x,y)` is within radius `R` of point `(u,v)`.  Try to do it without using a `sqrt` function.  (There is no need to submit this.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = '???'\n",
+    "y = '???'\n",
+    "u = '???'\n",
+    "v = '???'\n",
+    "R = '???'\n"
    ]
   }
  ],
