Added assessment script

--- a/weekly_labs/Week_02_Operators/week_02_operators.ipynb
+++ b/weekly_labs/Week_02_Operators/week_02_operators.ipynb
@@ -162,6 +162,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -175,7 +182,6 @@
     "| >= | Strictly less than | `a>=b` | True if `a` greater than or equal to `b` |\n",
     "| == | Equals | `a==b` | True if `a` equal to `b` |\n",
     "| != | Not equal | `a!=b` | True if `a` not equal to `b` |\n",
-    "| --- | --- | --- | --- |\n",
     "\n",
     "Here are some examples, this time just using integers.\n",
     "\n",
@@ -449,7 +455,9 @@
     "\n",
     "1. Edit the code below to print the statements only when they apply.\n",
     "\n",
-    "2. Copy the code to a file `compare.py` and test it by running `python test_compare.py compare.py`.\n",
+    "2. Copy the code to a file `compare.py` and test it by running `python compare.py`.\n",
+    "\n",
+    "3. Verify it using our marking script by typing `python test_compare.py compare.py`.\n",
     "\n",
     "3. Submit your `compare.py` file to the week 2 portfolio assignment on Blackboard "
    ]
@@ -477,7 +485,7 @@
     "if '???':\n",
     "    print(a,'is greater than',b)\n",
     "if '???':\n",
-    "    print(a,'is less than than',b)\n",
+    "    print(a,'is less than',b)\n",
     "if '???':\n",
     "    print(a,'is equal to',b)\n",
     "if '???':\n",
