Adding direct links for colab and for running the python file

--- a/weekly_labs/Week_02_Operators/week_02_operators.ipynb
+++ b/weekly_labs/Week_02_Operators/week_02_operators.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,18 @@
    "source": [
     "> What's going on with `13*12.4`?  Is that the right answer?  Remember from Seminar 1?\n",
     "\n",
+    "## Getting started\n",
+    "\n",
+    "Either:\n",
+    "\n",
+    "- Click [this link](https://colab.research.google.com/github/engmaths/SEMT10002_2024/blob/main/weekly_labs/Week_02_Operators/week_02_operators.ipynb) to open this notebook in Google colab.  You'll need to sign in with a Google account before you can run it.  When you do, hit `Ctrl+F9` to check it all runs.\n",
+    "\n",
+    "or\n",
+    "\n",
+    "- Download it to your local computer using `git clone https://github.com/engmaths/SEMT10002_2024` or just use `git pull` to refresh if you've done this already.\n",
+    "- Navigate to the subfolder `weekly_labs/Week_02_Operators/` and open the notebook `week_02_operators.ipynb`.  For example, in Visual Studio Code, use `Ctrl+K Ctrl+O` to open a folder and select the folder just mentioned.  Then you can open the notebook file by clicking on it in the left hand explorer sidebar.\n",
+    "\n",
+    "\n",
     "## Comparison Operators\n",
     "\n",
     "Comparisons allow us to detect relationships between two expressions.  For example, the expression `a<b` returns True if the value of `a` is strictly less than that of `b`, or False otherwise.  Here are some examples:"
@@ -49,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,13 +172,6 @@
     "a = '???'\n",
     "print('???')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -190,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +477,7 @@
      "output_type": "stream",
      "text": [
       "0.7195767195767196 is greater than 1.5867768595041323\n",
-      "0.7195767195767196 is less than than 1.5867768595041323\n",
+      "0.7195767195767196 is less than 1.5867768595041323\n",
       "0.7195767195767196 is equal to 1.5867768595041323\n",
       "0.7195767195767196 is within 0.1% of 1.5867768595041323\n"
      ]
@@ -503,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
