Added saturation example to Week 3

--- a/weekly_labs/Week_03_Flow/week_03_flow.ipynb
+++ b/weekly_labs/Week_03_Flow/week_03_flow.ipynb
@@ -253,6 +253,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Now another common situation - saturation or clipping.  Suppose we want to ensure that a value is always within a certain range.  If it goes too high, we limit to the upper limit, and if too low, we limit to the lower limit.  This is really common in control where actuators typically have a fixed range of operation, _e.g._ voltage outputs or motor speeds.\n",
+    "\n",
+    "> Can you make the code below a little more efficient?  How and why?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before saturation command is -1.2\n",
+      "After saturation command is -1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "command = -1.2 # test with values from -2.0 to 2.0\n",
+    "print('Before saturation command is', command)\n",
+    "\n",
+    "if command > 1.0:\n",
+    "    command = 1.0\n",
+    "if command < -1.0:\n",
+    "    command = -1.0\n",
+    "\n",
+    "print('After saturation command is', command)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "So far, so good.  But `elif` can sometimes catch you out if you haven't thought through the logic.  With apologies for returning to the touchy subject of grades, can you fix this example?\n",
     "\n",
     "> Eh?  Why is 65 only getting me a '3rd'?  I should get a 2:1 for that..."
@@ -460,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
